Time Remapping not work with markers #72443

Closed
opened 2019-12-14 07:59:32 +01:00 by Gregory · 3 comments

Time Remapping not work with markers. For example. If i bind "Camera_02" to 50 frame and use Time Remapping value 200, in 50 frame view jump to "Camera_02". But with new Time Remapping value 200 view can jump to "Camera_02" in 100 frame.

I tried to solve the problem by changing Frame Rate value from 30 to 60, but animation keys not change position in timeline by new frame rate

I neet re-render my animation from 30 frame rate to 60.

But cameras bing to markers - and views - with new Time Remapping - rendered not correctly. Time Remapping not change position animation keys and markers in timeline.

Thanks!

System Information
Operating system: Windows 10
Graphics card: GTX 1050Ti

Blender Version
2.80

Short description of error

Exact steps for others to reproduce the error
Based on the default startup or an attached .blend file (as simple as possible).

Time Remapping not work with markers. For example. If i bind "Camera_02" to 50 frame and use Time Remapping value 200, in 50 frame view jump to "Camera_02". But with new Time Remapping value 200 view can jump to "Camera_02" in 100 frame. I tried to solve the problem by changing Frame Rate value from 30 to 60, but animation keys not change position in timeline by new frame rate I neet re-render my animation from 30 frame rate to 60. But cameras bing to markers - and views - with new Time Remapping - rendered not correctly. Time Remapping not change position animation keys and markers in timeline. Thanks! **System Information** Operating system: Windows 10 Graphics card: GTX 1050Ti **Blender Version** 2.80 **Short description of error** **Exact steps for others to reproduce the error** Based on the default startup or an attached .blend file (as simple as possible).
Author

Added subscriber: @GregoryS

Added subscriber: @GregoryS

This issue was referenced by b888711e50

This issue was referenced by b888711e50e428c9b1d1744d2775fd4d95ddcb1e

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Campbell Barton self-assigned this 2019-12-23 07:31:36 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#72443
No description provided.