Fix T72443: Support time remapping for camera-markers